changing py framework to fastapi

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask-Cors==5.0.0
+fastapi==0.115.5
 google-cloud-firestore==2.19.0
 grpcio==1.68.0
 tensorflow==2.18.0
-gunicorn==23.0.0
+uvicorn==0.32.0
